Fix social media icons being blurry Change spacing for social media icons

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -24,6 +24,21 @@ html {
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
+
+.hvr-float-org {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: none;
+  transform: none;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
 .hvr-float:hover,
 .hvr-float:focus,
 .hvr-float:active {
